// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SolutionDetailsCard > isUpdatingStatus variant 1`] = `
<DocumentFragment>
  <div
    class="bg-base-lightest"
  >
    <div
      class="grid-container padding-3 bg-base-lightest maxw-none"
      data-testid="gridContainer"
    >
      <div
        class="grid-row"
        data-testid="grid"
      >
        <div
          class="desktop:grid-col-12"
          data-testid="grid"
        >
          <p
            class="text-bold margin-y-1"
          >
            Operational need
          </p>
          <p
            class="margin-top-0 font-body-sm"
          >
            Obtain an application support contractor
          </p>
        </div>
        <div
          class="desktop:grid-col-12"
          data-testid="grid"
        >
          <button
            class="usa-button usa-button--unstyled display-flex flex-align-center text-ls-1 deep-underline margin-bottom-1 margin-top-1"
            data-testid="toggle-need-answer"
            type="button"
          >
            <svg
              class="usa-icon margin-right-05 needs-question__rotate"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
              />
            </svg>
            Why is this a part of my operational needs?
          </button>
        </div>
      </div>
    </div>
    <div
      class="grid-row grid-gap padding-x-3 padding-bottom-3"
      data-testid="grid"
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <p
          class="text-bold margin-top-0 margin-bottom-1"
        >
          Solution
        </p>
        <ul
          class="usa-card-group flex-column flex-no-wrap"
          data-testid="CardGroup"
        >
          <li
            class="usa-card solution-card shadow"
            data-testid="Card"
          >
            <div
              class="usa-card__container"
            >
              <div
                class="padding-3"
              >
                <h3
                  class="margin-top-0 solutions-checkbox__header margin-bottom-2"
                >
                  Shared Systems
                </h3>
                <div
                  class="tablet:grid-col-6 margin-bottom-2"
                  data-testid="grid"
                >
                  <p
                    class="text-bold margin-bottom-0"
                  >
                    Point of contact
                  </p>
                  <p
                    class="margin-y-0"
                  >
                    John Mint
                  </p>
                  <a
                    aria-label="Send an email"
                    class="usa-link line-height-body-5 display-flex flex-align-center"
                    href="mailto:john.mint@oddball.io"
                    target="_blank"
                  >
                    <div>
                      john.mint@oddball.io
                    </div>
                    <svg
                      class="usa-icon margin-left-05 text-tbottom"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"
                      />
                    </svg>
                  </a>
                </div>
                <div
                  class="mint-divider"
                />
                <a
                  class="usa-link display-flex flex-align-center usa-button usa-button--unstyled margin-top-2"
                  href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list/it-solutions/081cb879-bd6f-4ead-b9cb-3a299de76390/solution-implementation-details?solution=shared-systems&section=about"
                >
                  About this solution
                  <svg
                    class="usa-icon margin-left-1"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </li>
        </ul>
        <div
          class="margin-y-1"
        >
          <a
            class="usa-link"
            data-testid="update-solutions-link"
            href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list/it-solutions/081cb879-bd6f-4ead-b9cb-3a299de76390/select-solutions?update=true"
          >
            Update solutions for this operational need
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SolutionDetailsCard > matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-base-lightest"
  >
    <div
      class="grid-container padding-3 bg-base-lightest maxw-none"
      data-testid="gridContainer"
    >
      <div
        class="grid-row"
        data-testid="grid"
      >
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <p
            class="text-bold margin-y-1"
          >
            Operational need
          </p>
          <p
            class="margin-top-0 font-body-sm margin-bottom-1"
          >
            Obtain an application support contractor
          </p>
        </div>
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <button
            class="usa-button usa-button--unstyled display-flex flex-align-center text-ls-1 deep-underline margin-bottom-1 margin-top-1"
            data-testid="toggle-need-answer"
            type="button"
          >
            <svg
              class="usa-icon margin-right-05 needs-question__rotate"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
              />
            </svg>
            Why is this a part of my operational needs?
          </button>
        </div>
      </div>
    </div>
    <div
      class="padding-x-3 padding-top-0"
    >
      <div
        class="mint-divider margin-bottom-3"
      />
    </div>
    <div
      class="grid-row grid-gap padding-x-3 padding-bottom-3"
      data-testid="grid"
    >
      <div
        class="desktop:grid-col-6"
        data-testid="grid"
      >
        <p
          class="text-bold margin-top-0 margin-bottom-1"
        >
          Solution
        </p>
        <ul
          class="usa-card-group flex-column flex-no-wrap"
          data-testid="CardGroup"
        >
          <li
            class="usa-card solution-card shadow"
            data-testid="Card"
          >
            <div
              class="usa-card__container"
            >
              <div
                class="padding-3"
              >
                <h3
                  class="margin-top-0 solutions-checkbox__header margin-bottom-2"
                >
                  Shared Systems
                </h3>
                <div
                  class="tablet:grid-col-6 margin-bottom-2"
                  data-testid="grid"
                >
                  <p
                    class="text-bold margin-bottom-0"
                  >
                    Point of contact
                  </p>
                  <p
                    class="margin-y-0"
                  >
                    John Mint
                  </p>
                  <a
                    aria-label="Send an email"
                    class="usa-link line-height-body-5 display-flex flex-align-center"
                    href="mailto:john.mint@oddball.io"
                    target="_blank"
                  >
                    <div>
                      john.mint@oddball.io
                    </div>
                    <svg
                      class="usa-icon margin-left-05 text-tbottom"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"
                      />
                    </svg>
                  </a>
                </div>
                <div
                  class="mint-divider"
                />
                <a
                  class="usa-link display-flex flex-align-center usa-button usa-button--unstyled margin-top-2"
                  href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list/it-solutions/081cb879-bd6f-4ead-b9cb-3a299de76390/solution-implementation-details?solution=shared-systems&section=about"
                >
                  About this solution
                  <svg
                    class="usa-icon margin-left-1"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </li>
        </ul>
        <div
          class="margin-y-1"
        >
          <a
            class="usa-link"
            data-testid="update-solutions-link"
            href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list/it-solutions/081cb879-bd6f-4ead-b9cb-3a299de76390/select-solutions?update=true"
          >
            Update solutions for this operational need
          </a>
        </div>
      </div>
      <div
        class="desktop:grid-col-6"
        data-testid="grid"
      >
        <div
          class="grid-row grid-gap margin-bottom-2"
          data-testid="grid"
        >
          <div
            class="mobile:grid-col-6"
            data-testid="grid"
          >
            <p
              class="margin-0 text-bold"
            >
              Must start by
            </p>
            <p
              class="margin-y-1"
            >
              not specified
            </p>
          </div>
          <div
            class="mobile:grid-col-6"
            data-testid="grid"
          >
            <p
              class="margin-0 text-bold"
            >
              Must be ready by
            </p>
            <p
              class="margin-y-1"
            >
              December 30, 2022
            </p>
          </div>
        </div>
        <div
          class="margin-bottom-3"
          data-testid="grid"
        >
          <p
            class="margin-top-0 margin-bottom-1 text-bold"
          >
            Status
          </p>
          <span
            class="mint-tag line-height-body-1 text-bold bg-gold text-base-darkest"
            data-testid="tag"
          >
            In progress
          </span>
        </div>
        <div
          class=""
          data-testid="grid"
        >
          <button
            class="usa-button usa-button usa-button--outline"
            data-testid="button"
            id="add-solution-not-listed"
            type="button"
          >
            Update status and timing
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
